--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ h1, h2, h3, h4, h5, h6 {
       <p class="w3-text-grey">With syrup, butter and lots of berries 8.50</p>
       
       <h4>Frittata</h4>
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ab quisquam rem explicabo similique tenetur assumenda, sunt, illum quibusdam odit asperiores nostrum doloribus natus impedit modi nam eius quo perferendis!</p>
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ab quisquam rem explicabo similique tenetur assumenda, sunt, illum quibusdam odit asperiores nostrum doloribus natus impedit modi nam eius quo perferendis! 11.50 </p>
     </div>
     
     <div class="w3-col l6 w3-padding-large">
